Исправлены недочеты присвоения id в InMemoryTaskManager